--- a/Sekretaris_Backend/Dockerfile
+++ b/Sekretaris_Backend/Dockerfile
@@ -1,5 +1,5 @@
 # Gunakan image base Go versi terbaru
-FROM golang:latest
+FROM golang:1.23-alpine
 
 # Buat direktori kerja di dalam container
 WORKDIR /app
@@ -21,5 +21,3 @@ EXPOSE 8088
 
 # Perintah untuk menjalankan aplikasi
 CMD ["./main"]
-
-
