--- a/Bendahara_backend/.env
+++ b/Bendahara_backend/.env
@@ -1,7 +1,7 @@
 APP_PORT=8087
 JWT_SECRET=Sementara123!
 DB_USER=root
-DB_PASS=fRBgUWsyqkcrbeUwNUJyLziJJZGZdqqZ
-DB_HOST=yamabiko.proxy.rlwy.net
-DB_PORT=46790
-DB_NAME=railway
+DB_PASS=Sementara1234!
+DB_HOST=192.168.77.3
+DB_PORT=3306
+DB_NAME=bendahara
