--- a/main_backend/.env
+++ b/main_backend/.env
@@ -1,11 +1,11 @@
-DB_HOST=51.79.154.15
+DB_HOST=localhost
 DB_PORT=3306     
 DB_USER=root
-DB_PASSWORD=Sementara1234!
+DB_PASSWORD=Sementara123!
 DB_NAME=godesaapps
 APP_PORT=8089
 SMTP_EMAIL=thejordan1414@gmail.com
 SMTP_PASSWORD=lkhp gbkj iqzy thrj
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-ALLOWED_ORIGIN=http://bontomanai.inesa.id
+ALLOWED_ORIGIN=http://localhost:3000
