--- a/Bendahara_backend/.env
+++ b/Bendahara_backend/.env
@@ -1,7 +1,7 @@
 APP_PORT=8087
 JWT_SECRET=Sementara123!
 DB_USER=root
-DB_PASS=Sementara1234!
-DB_HOST=51.79.154.15
+DB_PASS=Sementara123!
+DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=bendahara
