--- a/Sekretaris_Backend/.env
+++ b/Sekretaris_Backend/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
+DB_HOST=51.79.154.15
 DB_USER=root
-DB_PASSWORD=Sementara123!
+DB_PASSWORD=Sementara1234!
 DB_NAME=Sekertaris
 APP_PORT=8088
