--- a/main_backend/.env
+++ b/main_backend/.env
@@ -1,7 +1,7 @@
-DB_HOST=localhost
+DB_HOST=51.79.154.15
 DB_PORT=3306     
 DB_USER=root
-DB_PASSWORD=Sementara123!
+DB_PASSWORD=Sementara1234!
 DB_NAME=godesaapps
 APP_PORT=8089
 SMTP_EMAIL=thejordan1414@gmail.com
